# bmrs_api

./: .gitignore  README.md  interactive.ipynb  main.py  pyproject.toml
src/: report.py
src/api/: client.py  models.py
src/data/: clean.py  metrics.py
src/viz/: charts.py
tests/: march_bst.json  october_bst.json  test_clean.py  test_client.py  test_metrics.py  test_models.py
